<resources>
    <string name="app_name">Stankin INFO</string>
    <string name="schedule">Schedule</string>
    <string name="modules">Modules</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="news">News</string>
    <string name="enter">Login</string>
    <string name="info">Info</string>
    <string name="select_date">Select date</string>
    <string name="today">Today</string>
    <string name="week_forward">Week forward</string>
    <string name="week_backward">Week backward</string>
    <string name="manage_schedule">Manage schedule</string>
    <string name="calculate_rating">Calculate rating</string>
    <string name="account">Account</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="ok" translatable="false">OK</string>
    <string name="wrong_credentials">Wrong credentials!</string>
    <string name="subject">Subject</string>
    <string name="module_first">M1</string>
    <string name="module_second">M2</string>
    <string name="cource">C</string>
    <string name="offset">O</string>
    <string name="exam">E</string>
    <string name="coef">C</string>
    <string name="mj">Modules Journal</string>
    <string name="search_group">Search student group</string>
    <string name="loading_error">Error while loading data</string>
    <string name="reload">Reload</string>
    <string name="no_groups">No student groups found</string>
</resources>
