<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/select_date"
            android:icon="@drawable/ic_event_black_24dp"
            app:showAsAction="ifRoom"
            android:orderInCategory="1"
            android:title="@string/select_date"/>

    <item
            android:id="@+id/forward"
            android:icon="@drawable/ic_navigate_next_black_24dp"
            app:showAsAction="ifRoom"
            android:orderInCategory="3"
            android:title="@string/week_forward"/>

    <item
            android:id="@+id/backward"
            android:icon="@drawable/ic_navigate_before_black_24dp"
            app:showAsAction="ifRoom"
            android:orderInCategory="2"
            android:title="@string/week_backward"/>

</menu>